@startuml
package java {
package Modele {
    class User {
     name : String
     score : int
     serveurUtilisateur : Server
     creerContenue() : Contenu
    }

    abstract class Manche {
        centenu : Contenu
        proprietaire : User
        pointMax : int
        tickDepart : long
        calculerPoint(long)
        start()
        setContenu(MediaStore.Video)
        setContenu(MediaStore.Images)
    }

    interface Contenu {
        proprietaire : User
        lecture()
        supprimer()
    }

    class ContenuImage {
        image : Image
    }

    class ContenuVideo {
        video : Video
    }

    abstract class Partie {
        joueurs : ArrayList<User>
        ListeManches : ArrayList<Manche
        nbManches : int
        ajouterJoueur(User)
        supprimerJoueur(User))
        creerManches()
        start()
    }
}

package communication{
    package serveur {
        class Client {
        - Socket socket
        - PrintWriter out
        - BufferedReader in
        - Thread listener
        + void send(Message)
        }


        class Server {
        - {static} Server singleton
        - ServerSocket serverSocket
        - Thread clientSearch
        + Server getServer()
        }
        Server "1" ..> "*" Client : socketList
}
class Message {
+ String type
+ String contenu
+ JSONObject getJson()
+ {static} Message fromJson(String)
    }

    package client {
        class Client
    }
}
}
package kotlin{
    package vue {}
}
ContenuImage ..|> Contenu
ContenuVideo ..|> Contenu
Manche --> Contenu
Partie --> User
Partie --> Manche
@enduml